Update for Portfolio

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,37 @@
     margin: 0;    
 }
 
+.portfolioLinkHeader {
+    background-color: #CD5C5C;
+    color: white;
+    padding: 15px;
+}
+  
+#profileProjectName {
+    font-weight: bold;
+}
+  
+.portfolioLink {
+    color: white;
+    display: inline-block;
+    border-bottom: 1px solid white;
+    text-decoration: none;
+}
+  
+.portfolioLink:hover {
+    border-color: black;
+}
+  
+.portfolioLinkHeader a:hover {
+    color: black;
+}
+  
+.portfolioLinkHeader p{
+    margin: 0;
+    max-width: none;
+    color: white;
+}
+
 h1 {
     background: #404040;
     color: #ffffff;
